Styled font, fixed image for the show pages and worked on form and show page alignments

--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -17,5 +17,6 @@ li {
 
 body {
   background-color: #6A4E31;
+  font-family: 'Oswald', sans-serif;
 }
 
