--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -4,6 +4,7 @@
   grid-gap: 16px;
 }
 
+
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
   .cards {
@@ -84,7 +85,9 @@
 .card-category {
   background-size: cover;
   background-position: center;
-  height: 180px;
+  height: 200px;
+  width: 350px;
+  margin: 16px auto;
   display: flex;
   justify-content: center;
   align-items: center;
